body overflow x tiritante fixed

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   }
   body {
     background-color: #000;
+    overflow-x: hidden;
   }
   section {
     width: 100vw;
